[project]
name = "pharma-fetch"
version = "0.1.0"
description = "A Python tool to fetch and filter research papers from PubMed with pharmaceutical/biotech affiliations."
authors = [
    {name = "sunil", email = "itsmesunil13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
packages = [{include = "pharma_fetch", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.0.0"
biopython = "^1.85"

[tool.poetry.scripts]
get-papers-list = "pharma_fetch.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"